--- a/plugins/network/networkwidget.ui
+++ b/plugins/network/networkwidget.ui
@@ -14,7 +14,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="interfaceTab">
       <attribute name="title">
@@ -42,7 +42,12 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
-        <widget class="GammaRay::NetworkReplyWidget" name="widget_2" native="true"/>
+        <widget class="QSplitter" name="splitter">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <widget class="GammaRay::NetworkReplyWidget" name="widget_2" native="true"/>
+        </widget>
        </item>
       </layout>
      </widget>
