--- a/ui/tools/messagehandler/messagehandlerwidget.ui
+++ b/ui/tools/messagehandler/messagehandlerwidget.ui
@@ -62,14 +62,48 @@
       <attribute name="title">
        <string>Categories</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_4">
-       <item>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="2" column="0" colspan="4">
         <widget class="GammaRay::DeferredTreeView" name="categoriesView">
          <property name="rootIsDecorated">
           <bool>false</bool>
          </property>
          <property name="uniformRowHeights">
           <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QPushButton" name="saveAllConf">
+         <property name="text">
+          <string>Save All Logging Config</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="0">
+        <widget class="QPushButton" name="saveModConf">
+         <property name="text">
+          <string>Save Modified Logging Config</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <widget class="QPushButton" name="copyModConf">
+         <property name="text">
+          <string>Copy Modified Config for Env Var</string>
          </property>
         </widget>
        </item>
